--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
 	<title>{{ page.title }}</title>
 	
@@ -17,6 +20,8 @@
             {{ js | append: ".js" | asset }}
 		{% endfor %}
 	{% endif %}
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 
 <body>
@@ -32,3 +37,5 @@
 	</div></div>
 
 </body>
+
+</html>
