--- a/_assets/css/app.css
+++ b/_assets/css/app.css
@@ -1,5 +1,29 @@
 #app {
     width: 100%;
     height: 600px;
+
+    /* Prevent zoom/scroll from touch events. */
     touch-action: none;
+
+    /* Prevent clicks within the app from selecting text. */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+
+@media (max-width: 775px) {
+    #app {
+        height: 400px;
+    }
+}
+
+@media (max-width: 500px) {
+    #app {
+        height: 300px;
+    }
 }
