--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
 	{% endif %}
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+	{% asset favicon.ico %}
 </head>
 
 <body>
