--- a/_layouts/demo.html
+++ b/_layouts/demo.html
@@ -13,6 +13,7 @@
     {{ page.demo_name | append: ".js" | asset }}
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    {% asset favicon.ico %}
 </head>
 
 <body>
