Added demo for ball pit sim

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
 
 <head>
 	{% include analytics.html %}
-
+	<meta charset="utf-8"> 
+	
 	<title>{{ page.title }}</title>
 	
     {% asset "style.css" %}
